Minor Refactor